--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,7 +10,7 @@
         android:title="@string/action_search"/>
     <item
         android:id="@+id/action_plus"
-        android:actionProviderClass="com.zhaohu.niubility.PlusActionProvider"
+        android:actionProviderClass="com.zhaohu.niubility.activities.PlusActionProvider"
         android:icon="@drawable/actionbar_add_icon"
         android:showAsAction="ifRoom"
         android:title="@string/action_plus"/>
