--- a/app/src/main/res/layout/results_item_layout.xml
+++ b/app/src/main/res/layout/results_item_layout.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" 
-    android:layout_height="100dp"
-    android:orientation="horizontal">
+    android:layout_height="150dp"
+    android:orientation="horizontal"
+    android:paddingLeft="@dimen/result_item_padding_left_right"
+    android:paddingRight="@dimen/result_item_padding_left_right"
+    android:paddingTop="@dimen/result_item_padding_top_bottom"
+    android:paddingBottom="@dimen/result_item_padding_top_bottom">
     
     <ImageView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"/>
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:paddingRight="@dimen/result_item_padding_left_right"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +23,9 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:maxLines="1"/>
         <TextView
             android:id="@+id/start_time"
             android:layout_width="match_parent"
