--- a/app/src/main/res/values-v14/styles.xml
+++ b/app/src/main/res/values-v14/styles.xml
@@ -9,12 +9,12 @@
     </style>
 
     <style name="WeChatActionBar" parent="@android:style/Widget.Holo.ActionBar">
-        <item name="android:background">#303537</item>
+        <item name="android:background">@color/actionbar_color</item>
         <item name="android:titleTextStyle">@style/WeChatActionBarTitleText</item>
     </style>
 
     <style name="WeChatActionBarTitleText" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">#cfcfcf</item>
+        <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">17sp</item>
     </style>
 
