--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="result_item_padding_left_right">16dp</dimen>
+    <dimen name="result_item_padding_top_bottom">16dp</dimen>
+
+
 </resources>
