--- a/app/src/main/res/layout/results_item_layout.xml
+++ b/app/src/main/res/layout/results_item_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent" 
     android:layout_height="150dp"
     android:orientation="horizontal"
+    android:layout_gravity="center_vertical"
     android:paddingLeft="@dimen/result_item_padding_left_right"
     android:paddingRight="@dimen/result_item_padding_left_right"
     android:paddingTop="@dimen/result_item_padding_top_bottom"
@@ -11,36 +12,55 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:paddingRight="@dimen/result_item_padding_left_right"/>
+        android:layout_height="match_parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:paddingLeft="@dimen/result_item_padding_left_right"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:ellipsize="end"
+            android:maxLines="1"
+            android:textSize="@dimen/result_item_title_text_size"
+            android:paddingBottom="@dimen/result_item_title_padding_bottom"
+            android:textColor="#000000"/>
+        <TextView
+            android:id="@+id/owner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:textSize="@dimen/result_item_other_text_size"
+            android:paddingBottom="@dimen/result_item_other_padding_bottom"
             android:maxLines="1"/>
         <TextView
             android:id="@+id/start_time"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"/>
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:textSize="@dimen/result_item_other_text_size"
+            android:paddingBottom="@dimen/result_item_other_padding_bottom"
+            android:maxLines="1"/>
         <TextView
             android:id="@+id/end_time"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"/>
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:textSize="@dimen/result_item_other_text_size"
+            android:paddingBottom="@dimen/result_item_other_padding_bottom"
+            android:maxLines="1"/>
         <TextView
             android:id="@+id/address"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"/>
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/result_item_other_text_size"
+            android:paddingBottom="@dimen/result_item_other_padding_bottom"
+            android:maxLines="2"/>
 
         </LinearLayout>
 
