--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,13 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="result_item_padding_left_right">16dp</dimen>
-    <dimen name="result_item_padding_top_bottom">16dp</dimen>
+    <dimen name="result_item_padding_left_right">12dp</dimen>
+    <dimen name="result_item_padding_top_bottom">12dp</dimen>
 
+    <dimen name="result_item_title_text_size">16sp</dimen>
+    <dimen name="result_item_other_text_size">13sp</dimen>
+
+    <dimen name="result_item_title_padding_bottom">5dp</dimen>
+    <dimen name="result_item_other_padding_bottom">2dp</dimen>
 
 </resources>
