--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="background_tab_pressed">#6633B5E5</color>
-    <color name="actionbar_color">#fe6817</color>
+    <color name="actionbar_color">#f16114</color>
     <color name="actionbar_old_color">#303537</color>
+
 </resources>
