--- a/app/src/main/res/layout/results_item_layout.xml
+++ b/app/src/main/res/layout/results_item_layout.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/result_item_padding_top_bottom"
     android:paddingBottom="@dimen/result_item_padding_top_bottom">
     
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/image"
         android:layout_width="120dp"
         android:layout_height="match_parent"/>
