--- a/app/src/main/res/layout/photo_layout.xml
+++ b/app/src/main/res/layout/photo_layout.xml
@@ -1,13 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="120dp"
+    android:orientation="horizontal"
+    android:layout_gravity="center_vertical">
 
-    <ImageView
-        android:id="@+id/photo"
+    <com.android.volley.toolbox.NetworkImageView
+        android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:scaleType="fitXY"/>
+        android:layout_height="match_parent"/>
 
-</RelativeLayout> 
+</LinearLayout>
