--- a/app/src/main/res/layout/photo_wall_layout.xml
+++ b/app/src/main/res/layout/photo_wall_layout.xml
@@ -7,12 +7,13 @@
         android:id="@+id/photo_wall"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/black"
         android:columnWidth="@dimen/image_thumbnail_size"
         android:gravity="center"
         android:horizontalSpacing="@dimen/image_thumbnail_spacing"
+        android:verticalSpacing="@dimen/image_thumbnail_spacing"
         android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="@dimen/image_thumbnail_spacing" >
+        android:stretchMode="columnWidth" >
     </GridView>
 
 </LinearLayout>  
