Big refactor to client, activities, fragments

--- a/app/src/main/res/layout/home_page_layout.xml
+++ b/app/src/main/res/layout/home_page_layout.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/spinner_layout"/>
+
     <ListView
         android:id="@+id/results_list"
         android:layout_width="match_parent"
