--- a/app/src/main/res/layout/album_item_layout.xml
+++ b/app/src/main/res/layout/album_item_layout.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="300dp">
 
-    <!--<com.android.volley.toolbox.NetworkImageView -->
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
+
         android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_weight="4"
