--- a/app/src/main/res/layout/zoom_image_layout.xml
+++ b/app/src/main/res/layout/zoom_image_layout.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhaohu.niubility.views.ZoomImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/zoom_image_view"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000000" >
+    android:layout_height="match_parent">
 
-</com.zhaohu.niubility.views.ZoomImageView>
+    <include layout="@layout/spinner_layout"/>
+
+    <com.zhaohu.niubility.views.ZoomImageView
+        android:id="@+id/zoom_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000" >
+
+    </com.zhaohu.niubility.views.ZoomImageView>
+
+</FrameLayout>
