--- a/app/src/main/res/layout/zoom_image_layout.xml
+++ b/app/src/main/res/layout/zoom_image_layout.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/spinner_layout"/>
-
     <com.zhaohu.niubility.views.ZoomImageView
         android:id="@+id/zoom_image_view"
         android:layout_width="match_parent"
@@ -12,5 +10,14 @@
         android:background="#000000" >
 
     </com.zhaohu.niubility.views.ZoomImageView>
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 
 </FrameLayout>
