--- a/app/src/main/res/layout/photo_wall_layout.xml
+++ b/app/src/main/res/layout/photo_wall_layout.xml
@@ -13,8 +13,7 @@
         android:horizontalSpacing="@dimen/image_thumbnail_spacing"
         android:verticalSpacing="@dimen/image_thumbnail_spacing"
         android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:scrollbars="none">
+        android:stretchMode="columnWidth" >
     </GridView>
 
 </LinearLayout>  
